# heatpump-act

./: .dockerignore  .env.sample  .gitignore  .pylintrc  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  test.sh
.github/workflows/: ci.yaml  codeql-analysis.yml
act/: act.py  action.py  action_covid.py  action_ensure_zone1_flow_temperature_is_correct.py  action_manage_power_state_for_space_heating.py  action_manage_tank_temperature.py  action_octopus_go.py  action_stop_forcing_hot_water.py  action_turn_off_power.py  action_turn_on_power.py  alter_setting.py  device_infos.py  dwell.py  effective_temperature.py  emoncms.py  last_time_stamp.py  log4j.properties  midpoint_temp.py  occupant_comes_home.py  predicate.py  schedule.py  simple_checks.py  state_change.py  target_water_temperature.py  temperature_thresholds.py  time_based_criteria.py
lint/: mypy.ini
test/: test_act.py  test_action.py  test_startup_flow_temperature.py  test_turn_off_dwell_time.py
